--- a/index.html
+++ b/index.html
@@ -81,9 +81,6 @@ tr:nth-child(1) {
             minZoom: 9,
           }
         ),
-        Places: L.tileLayer.wms("http://ows.mundialis.de/services/service?", {
-          layers: "OSM-Overlay-WMS",
-        }),
       };
 
       basemaps.Base.addTo(map);
@@ -170,25 +167,7 @@ tr:nth-child(1) {
       };
 
       organisations.forEach((organisation) => {
-        // var greenIcon = L.icon({
-        //   iconUrl: "leaf-green.png",
 
-        //   iconSize: [38, 95], // size of the icon
-        //   shadowSize: [50, 64], // size of the shadow
-        //   iconAnchor: [22, 94], // point of the icon which will correspond to marker's location
-        //   shadowAnchor: [4, 62], // the same for the shadow
-        //   popupAnchor: [-3, -76], // point from which the popup should open relative to the iconAnchor
-        // });
-
-        // const greenIconMarker = L.marker(organisation.coordinates, {
-        //   icon: greenIcon,
-        // });
-
-        // greenIconMarker.addTo(map);
-
-        // greenIconMarker.bindPopup(
-        //   `<strong>${organisation.name}</strong><br>Cyclists: ${organisation.cyclistsCount}<br>Representative: ${organisation.representative}<br><a href="https://www.ciovita.co.za/">website</a>`
-        // );
         const circle1 = L.circle(organisation.coordinates, {
           color: "#55e73c",
           fillColor: "#55e73c",
@@ -206,15 +185,58 @@ tr:nth-child(1) {
         );
       });
 
-      // const circle2 = L.circle([-33.969671, 18.474231], {
-      //   color: "#55e73c",
-      //   fillColor: "#55e73c",
-      //   fillOpacity: 0.6,
-      //   radius: 200,
-      // }).addTo(map);
-      // circle2.bindPopup(
-      //   `<strong>TKLA</strong><br>Cyclists: 15<br>Representative: Hayden Malan<br><a href="https://www.tk-l-a.com/">website</a>`
-      // );
+  // Proposals // 
+  function onEachFeature(feature, layer) {
+    if (feature.properties && feature.properties.popupContent) {
+        layer.bindPopup(feature.properties.popupContent);
+    }
+}
+var Lanes = [{
+    "type": "Feature",
+    "properties": {"Proposal": "1",
+    // desired popup content: Proposal link: https://drive.google.com/file/d/15WWit5D0bZhEde_4Msf28j5vZ-5KssLI/view?usp=share_link
+    "popupContent": "Proposal 1"},
+    "geometry": {
+        "type": "MultiLineString",
+        "coordinates": [[[ 18.446459, -33.926443 ], [ 18.448485, -33.926649 ], [ 18.451038, -33.926934 ], [ 18.452939, -33.927202 ], [ 18.455331, -33.927407 ], [ 18.456598, -33.927595 ], [ 18.458767, -33.928094 ], [ 18.459236, -33.928224 ], [ 18.459673, -33.928309 ], [ 18.460575, -33.928545 ], [ 18.462079, -33.928889 ], [ 18.464007, -33.929371 ], [ 18.466426, -33.929969 ], [ 18.468773, -33.930549 ], [ 18.469425, -33.930701 ], [ 18.47009, -33.930772 ], [ 18.470696, -33.930835 ], [ 18.471344, -33.930964 ], [ 18.47144, -33.931002 ]
+        ]]
+    }
+}, {
+    "type": "Feature",
+    "properties": {
+      "Proposal": "2",
+       // desired popup content: Proposal link: https://drive.google.com/file/d/1vmV7QYmNqpeJqVHWUCDNd7UgZ6wX5JYN/view?usp=share_link
+      "popupContent": "Proposal 2"},
+    "geometry": {
+        "type": "MultiLineString",
+        "coordinates": [[[ 18.418229, -33.920995 ], [ 18.419104, -33.920187 ], [ 18.420081, -33.91929 ], [ 18.421076, -33.91838 ], [ 18.422071, -33.91747 ], [ 18.422661, -33.916925 ], [ 18.422821, -33.916858 ], [ 18.42312, -33.916778 ], [ 18.423401, -33.916639 ]
+        ]]
+    }
+  }, {
+    "type": "Feature",
+    "properties": {
+      "Proposal": "3",
+      "popup.setContent": "Proposal 3"},
+    "geometry": {
+        "type": "MultiLineString",
+        "coordinates": [[[ 18.347451, -34.005932 ], [ 18.347451, -34.005485 ], [ 18.347392, -34.005216 ], [ 18.347237, -34.004963 ], [ 18.34702, -34.004791 ], [ 18.346662, -34.004621 ], [ 18.346273, -34.004419 ], [ 18.346045, -34.004166 ], [ 18.345881, -34.003719 ], [ 18.34572, -34.003182 ], [ 18.345505, -34.002838 ], [ 18.345291, -34.002686 ], [ 18.34512, -34.002611 ], [ 18.344706, -34.002487 ], [ 18.344218, -34.002327 ], [ 18.343985, -34.002147 ], [ 18.343825, -34.001903 ], [ 18.343771, -34.001615 ], [ 18.343818, -34.001212 ], [ 18.343935, -34.000723 ], [ 18.344066, -34.00015 ], [ 18.344156, -33.999903 ], [ 18.34434, -33.999664 ], [ 18.34464, -33.999461 ], [ 18.344851, -33.999395 ], [ 18.345394, -33.99928 ], [ 18.345837, -33.999187 ], [ 18.346169, -33.999 ], [ 18.346343, -33.998768 ], [ 18.34645, -33.998466 ], [ 18.346523, -33.997908 ], [ 18.346617, -33.997145 ], [ 18.346655, -33.99666 ], [ 18.346558, -33.996381 ], [ 18.346322, -33.996074 ], [ 18.345879, -33.995716 ], [ 18.345565, -33.995275 ], [ 18.345394, -33.994741 ], [ 18.345177, -33.994027 ], [ 18.344928, -33.99309 ], [ 18.344912, -33.99239 ], [ 18.344926, -33.991989 ], [ 18.345041, -33.991675 ], [ 18.345242, -33.99147 ], [ 18.345793, -33.991121 ], [ 18.346833, -33.990448 ], [ 18.347189, -33.990266 ], [ 18.347949, -33.989994 ], [ 18.348401, -33.989778 ], [ 18.348678, -33.989523 ], [ 18.348877, -33.989134 ], [ 18.349081, -33.988748 ], [ 18.349329, -33.988526 ], [ 18.349678, -33.988385 ], [ 18.350088, -33.98834 ], [ 18.350568, -33.988383 ], [ 18.3509, -33.988369 ], [ 18.351343, -33.988265 ], [ 18.351777, -33.988074 ], [ 18.352524, -33.987818 ], [ 18.353058, -33.987739 ], [ 18.353599, -33.987629 ], [ 18.353877, -33.987492 ], [ 18.354086, -33.987286 ], [ 18.354283, -33.986919 ], [ 18.354479, -33.986427 ], [ 18.354802, -33.985994 ], [ 18.355124, -33.985715 ], [ 18.355777, -33.985359 ], [ 18.356465, -33.98516 ], [ 18.357229, -33.984954 ], [ 18.357604, -33.98478 ], [ 18.357842, -33.98457 ], [ 18.35803, -33.98426 ], [ 18.358196, -33.983872 ], [ 18.358344, -33.983577 ], [ 18.358601, -33.983286 ], [ 18.358983, -33.982956 ], [ 18.359381, -33.98259 ], [ 18.359803, -33.982387 ], [ 18.360173, -33.982303 ], [ 18.360546, -33.982307 ], [ 18.361039, -33.982408 ], [ 18.361388, -33.982509 ], [ 18.361768, -33.982502 ], [ 18.362127, -33.982384 ], [ 18.362438, -33.982101 ], [ 18.362668, -33.981717 ], [ 18.36286, -33.981459 ], [ 18.363161, -33.981249 ], [ 18.363569, -33.981061 ], [ 18.363887, -33.980747 ], [ 18.364019, -33.980405 ], [ 18.364138, -33.979965 ], [ 18.364277, -33.979661 ], [ 18.364557, -33.979434 ], [ 18.365042, -33.979239 ], [ 18.365426, -33.979085 ], [ 18.365855, -33.978789 ], [ 18.366295, -33.978398 ], [ 18.367206, -33.97756 ], [ 18.367698, -33.976915 ], [ 18.368197, -33.976374 ], [ 18.368448, -33.976094 ], [ 18.368706, -33.97585 ], [ 18.369289, -33.975358 ], [ 18.36975, -33.974978 ], [ 18.370228, -33.974688 ], [ 18.370738, -33.974444 ], [ 18.371188, -33.974129 ], [ 18.37153, -33.973669 ], [ 18.37167, -33.973121 ], [ 18.37175, -33.972667 ], [ 18.371802, -33.972171 ], [ 18.371795, -33.971714 ], [ 18.37175, -33.971337 ], [ 18.371401, -33.970446 ], [ 18.371013, -33.969423 ], [ 18.370989, -33.969035 ], [ 18.371076, -33.96869 ], [ 18.371321, -33.968358 ], [ 18.371952, -33.967992 ], [ 18.372745, -33.967559 ], [ 18.373101, -33.967262 ], [ 18.373369, -33.966879 ], [ 18.373485, -33.966477 ], [ 18.373457, -33.966055 ], [ 18.373296, -33.965566 ], [ 18.373258, -33.965346 ]
+        ]]
+    }
+}];
+
+L.geoJSON(Lanes, {
+    style: function(feature) {
+        switch (feature.properties.Proposal) {
+            case '1': return {color: "#6b3b27"};
+            case '2':   return {color: "#6b3b27"};
+            case '3':   return {color: "#6b3b27"};
+            case '3':   return {dasharray: "10,20"};
+        }}
+    //   {
+    //     onEachFeature: function(properties.Proposal) {
+    // feature.bindPopup('<h1>'+feature.properties.Proposal+'</h1><p>name: '+feature.properties.f2+'</p>');
+    // }
+}).addTo(map);
     </script>
   </body>
 </html>
