Legend text changed

--- a/index.html
+++ b/index.html
@@ -34,10 +34,24 @@
         .overlay-map {
       display: block;
       }
+      .leaflet-control-layers {
+      background-color: rgba(229, 248, 226, 0.186);
+      width: 200px;
+      }
+      .leaflet-control-layers-selector {
+      margin-top: 2px;
+      color: #6b3b27;
+      position: relative;
+      top: 1px;
+      }
+      .leaflet-control-layers-overlays label {
+      color: #6b3b27;
+      text-decoration: bold 
+      }
       .brown a {
-        color: #6b3b27;
-        text-decoration: none;
-    }
+      color: #6b3b27;
+      text-decoration: none;
+      }
     </style>
   </head>
   <body>
