--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@
           address: "https://www.tk-l-a.com",
         },
         {
+          coordinates: [-34.03538681835805, 18.658927740543284],
+          name: "Khaltsha Cycles",
+          cyclistsCount: 130,
+          genre: "Club",
+          representative: "Sindile Mavundla",
+          address: "https://www.khaltshacycles.co.za/",
+        },
+        {
           coordinates: [-33.928135, 18.423820],
           name: "East City Cycles",
           cyclistsCount: 465,
