--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@
           representative: "Sindile Mavundla",
           address: "https://www.khaltshacycles.co.za/",
         },
+                {
+          coordinates: [-33.96398083669696, 18.4695883714251],
+          name: "Boys for Abundance",
+          cyclistsCount: 8,
+          genre: "Social Cycle Group",
+          representative: "Zamindlela Mkhwanazi",
+          address: "0791277461",
+        },
         {
           coordinates: [-33.928135, 18.423820],
           name: "East City Cycles",
