--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
           cyclistsCount: 8,
           genre: "Social Cycle Group",
           representative: "Zamindlela Mkhwanazi",
-          address: "0791277461",
+          address: "",
+          contact: "0791277461",
         },
         {
           coordinates: [-33.928135, 18.423820],
@@ -213,7 +214,8 @@ organisations.forEach((organisation) => {
           <tr><th>Cyclist Genre</th><td>${org.genre}</td></tr>
           <tr><th>Number of Cyclists</th><td>${org.cyclistsCount}</td></tr>
           <tr><th>Representative</th><td>${org.representative}</td></tr>
-          <tr><th>(Optional)<br>Contact Link</th><td><div class=\"brown\"><a href="https://www.ciovita.co.za/">Website</a></td></tr>
+          <tr><th>Contact</th><td><div class=\"brown\"><a ${org.contact}</a></td></tr>
+          <tr><th>Website (if any)</th><td><div class=\"brown\"><a href="${org.address}">Website</a></td></tr>
         </table>
       `;
       this.bindPopup(popupContent).openPopup();
