khaltshacycles contact added

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
           cyclistsCount: 130,
           genre: "Club",
           representative: "Sindile Mavundla",
+          contact: "0845512053",
           address: "https://www.khaltshacycles.co.za/",
         },
                 {
