--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
       integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
       crossorigin=""
     ></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+      $(document).ready(function() {
+        $('a[href^="http"]').not('[href*="' + window.location.hostname + '"]').attr('target', '_blank');
+      });
+    </script>
+
     <script>
       const map = L.map("map", {
         center: [-34.000874, 18.539193],
