--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           cyclistsCount: 12,
           genre: "Cycling Club",
           representative: "Charl Neethling",
-          address: "https://www.ciovita.co.za/ target=_blank",
+          address: "https://www.ciovita.co.za/" target="_blank",
         },
         {
           coordinates: [-33.969671, 18.474231],
@@ -135,7 +135,7 @@
           cyclistsCount: 3,
           genre: "Social Cycle Group",
           representative: "Hayden Malan",
-          address: "https://www.tk-la.co.za/ target=_blank",
+          address: "https://www.tk-la.co.za/" target="_blank",
         },
         {
           coordinates: [-34.03538681835805, 18.658927740543284],
@@ -144,7 +144,7 @@
           genre: "Cycling Club",
           representative: "Sindile Mavundla",
           contact: "0845512053",
-          address: "https://www.khaltshacycles.co.za/ target=_blank",
+          address: "https://www.khaltshacycles.co.za/" target="_blank",
         },
                 {
           coordinates: [-33.96398083669696, 18.4695883714251],
@@ -161,7 +161,7 @@
           cyclistsCount: 465,
           genre: "Cycling Club",
           representative: "Jarryd Haley",
-          address: "https://www.eastcitycycles.com/ target=_blank",
+          address: "https://www.eastcitycycles.com/" target="_blank",
         },
         {
           coordinates: [-33.9238, 18.41520],
@@ -169,7 +169,7 @@
           cyclistsCount: 113,
           genre: "Cycling Club",
           representative: "Pang (Surname)",
-          address: "https://www.rookcycles.com/ target=_blank",
+          address: "https://www.rookcycles.com/" target="_blank",
         },
         {
           coordinates: [-33.911729163379654, 18.39424392530954],
@@ -177,7 +177,7 @@
           cyclistsCount: 329,
           genre: "Cycling Club",
           representative: "Mat Keiser",
-          address: "https://www.instagram.com/mother_amateur_bicycling_club/ target=_blank",
+          address: "https://www.instagram.com/mother_amateur_bicycling_club/" target="_blank",
         },
         {
           coordinates: [-33.99713886723101, 18.45176222264877],
@@ -185,7 +185,7 @@
           cyclistsCount: 141,
           genre: "Cycling Club",
           representative: "Angel N.1",
-          address: "https://www.trailangels.co.za/ target=_blank",
+          address: "https://www.trailangels.co.za/" target="_blank",
         },
         {
           coordinates: [-33.94818370463969, 18.52277421724254],
@@ -194,7 +194,7 @@
           genre: "Cycling Club",
           representative: "Mzikhona Mgedle",
           contact: "0719702475",
-          address: "https://www.langabicyclehub.co.za/ target=_blank",
+          address: "https://www.langabicyclehub.co.za/" target="_blank",
         },
       ];
 
