--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           genre: "Cycling Club",
           representative: "Sindile Mavundla",
           contact: "0845512053",
-          address: `"https://www.khaltshacycles.co.za" target="_blank"`,
+          address: `https://www.khaltshacycles.co.za target=_blank`,
         },
                 {
           coordinates: [-33.96398083669696, 18.4695883714251],
